--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Add the dictonary you want here. i got mine from here: https://github.com/dwyl/english-word
+assets/words.json
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
